Fix events overlay and padding on Safari

--- a/packages/Events/components/EventCard/eventCard.module.css
+++ b/packages/Events/components/EventCard/eventCard.module.css
@@ -149,7 +149,7 @@ p {
         padding-bottom: 20px !important;
     }
 
-    .eventsContainer::before {
+    .eventsContainer::before, .eventsContainer::after {
         content:'';
         display:block;
         position:absolute;
@@ -158,18 +158,13 @@ p {
         width:100%;
         height:100%;
         pointer-events: none;
+    }
+
+    .eventsContainer::before {
         box-shadow: inset -10px 0 10px 0 rgb(254 221 110);
     }
 
     .eventsContainer::after {
-        content:'';
-        display:block;
-        position:absolute;
-        top:0;
-        left:0;
-        width:100%;
-        height:100%;
-        pointer-events: none;
         box-shadow: inset 10px 0 10px 0 rgb(254 221 110);
     }
 
@@ -195,11 +190,15 @@ p {
     }
 
     .campEventsApp > div {
-        padding: 0 30px;
+        padding: 0 40px;
     }
 
     .eventsContainer {
         gap: 30px;
+    }
+
+    .eventsContainer::before, .eventsContainer::after {
+        border-radius: 9px;
     }
 
     .eventsContainer::before {
@@ -212,10 +211,6 @@ p {
 }
 
 @media only screen and (min-width: 1440px) {
-    .campEventsApp > div {
-        padding: 0 40px;
-    }
-
     .eventsHeader h1 {
         font-size: 54px;
     }
